Fixing wrap issue in output areas defined with whitespace:pre.

--- a/frontend/src/styles/learn.scss
+++ b/frontend/src/styles/learn.scss
@@ -220,13 +220,13 @@ div {
         color: $color-font-grey;
         padding-left: 15px;
         padding-right: 3px;
-        white-space: pre;
+        white-space: pre-wrap;
     }
     &.output_msg {
         color: $color-widget-msg;
         padding-left: 15px;
         padding-right: 3px;
-        white-space: pre;
+        white-space: pre-wrap;
         &:hover {
             background-color: #fdd;
         }
@@ -235,7 +235,7 @@ div {
         color: $color-widget-info;
         padding-left: 15px;
         padding-right: 3px;
-        white-space: pre;
+        white-space: pre-wrap;
         &:hover {
             background-color: $color-widget-msg-info-bg-hover;
         }
@@ -244,13 +244,13 @@ div {
         color: $color-widget-info;
         padding-left: 3px;
         padding-right: 3px;
-        white-space: pre;
+        white-space: pre-wrap;
     }
     &.output_error {
         color: $color-widget-error;
         padding-left: 3px;
         padding-right: 3px;
-        white-space: pre;
+        white-space: pre-wrap;
     }
     &.output_success {
         color: $color-widget-success;
